# lucky

./: .gitignore  .vercelignore  CHANGELOG.md  LICENSE  README.md  nx.json  package-lock.json  package.json  tsconfig.base.json
anchor/: Anchor.toml  package.json  tsconfig.lib.json
anchor/constants/: tokens.ts
anchor/programs/dealer/: Cargo.toml
anchor/programs/games/: Cargo.toml
anchor/programs/lucky/: Cargo.toml
anchor/programs/store/: Cargo.toml
anchor/programs/tiny-adventure/: Cargo.toml
anchor/programs/vault/: Cargo.toml
anchor/programs/vault/src/: lib.rs
anchor/src/: dealer-exports.ts  games-exports.ts  index.ts  lucky-exports.ts  store-exports.ts  tiny-adventure-exports.ts  vault-exports.ts
anchor/src/games-exports/: constants.ts  helpers.ts  index.ts  program.ts
anchor/tests/: bounty.spec.ts  dealer.spec.ts  game-mode.spec.ts  game.spec.ts  games.spec.ts  lucky.spec.ts  player.spec.ts  store.spec.ts  tiny-adventure.spec.ts  treasure.spec.ts  vault.spec.ts
anchor/utils/: token.ts
scripts/: jest.config.ts  project.json
scripts/loaders/: chainlink-data-feed.sh  metaplex.sh
scripts/src/: constants.ts  index.ts  main.ts
scripts/src/tokens/: index.ts  stronghold.ts
scripts/src/utils/: account.ts  connection.ts  format.ts  (+4 more)
web/: tailwind.config.js
web/adapters/: index.ts
web/app/: layout.tsx
web/context/: ProtectedContext.tsx
web/hooks/: index.ts
web/providers/: crypto-provider.tsx  data-feed.tsx  index.ts  lucky-bags-provider.tsx  solana-provider.tsx  wallet-provider.tsx
web/utils/: crypto.ts  index.ts  transactions.ts
(+183 files in other folders)
