[package]
name = "vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["anchor-debug", "allow-missing-optionals", "init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["dex", "governance", "metadata"] }
solana-program = "=1.18.5"
